# userDefinedOperators_cpp

./: .readthedocs.yaml  CMakeLists.txt  README.md  myfunctions.cpp  myfunctions.py  pybind_wrapper.cpp  requirements.txt  setup.py  test_simple.py
docs/: 404.md  mkdocs.yml  requirements.txt
docs/about/: team.md
docs/contact/: contact.md
docs/user-guide/: configuration.md  installation.md
myfunctions_ctypes/: CMakeLists.txt  myfunctions.py
myfunctions_ctypes_cmakeCompile/: myfunctions_linux.py
myfunctions_ctypes_cmakeCompile/build_win64/: ALL_BUILD.vcxproj  DLLProject.sln  ZERO_CHECK.vcxproj  cmake_install.cmake  myfunctions.vcxproj  myfunctions.vcxproj.filters
myfunctions_declspec_cmakeCompile/: CMakeLists.txt  README.md  myfunctions.py  myfunctions_linux.cpp  myfunctions_linux.py  myfunctions_win64.py
myfunctions_declspec_cmakeCompile/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
myfunctions_declspec_cmakeCompile/build_win64/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj.filters
myfunctions_declspec_cmakeCompile/build_win64/myfunctions.dir/Release/myfunctions.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
myfunctions_declspec_cmakeCompile/build_win64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
myfunctions_declspec_cmakeCompile/build_win64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
simple_lib_pybind/: CMakeLists.txt  mymodule.pyd  setup.py  simple.cpp  simple_lib.cp310-win_amd64.pyd  simple_pybind_wrapper.cpp  test_simple.py
simple_lib_pybind11_setupCompile/: pybind_wrapper.cpp  simple_lib_call.py
simple_library_pybind11_cmakeCompile/: CMakeLists.txt  simple_library_call.py  simple_pybind_wrapper.cpp
simple_library_pybind11_cmakeCompile/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
simple_library_pybind11_cmakeCompile/build_win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  simple_library.sln  simple_library.vcxproj  simple_library.vcxproj.filters
simple_library_pybind11_cmakeCompile/build_win64/Release/: simple_library.cp310-win_amd64.pyd  simple_library.exp
simple_library_pybind11_cmakeCompile/build_win64/simple_library.dir/Release/: simple_library.cp310-win_amd64.iobj  simple_library.cp310-win_amd64.pyd.recipe
simple_library_pybind11_cmakeCompile/build_win64/simple_library.dir/Release/simple_library.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
simple_library_pybind11_cmakeCompile/build_win64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
simple_library_pybind11_cmakeCompile/build_win64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
simple_library_pybind11_cmakeCompile/build_win64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
simple_library_pybind11_cmakeCompile/build_win64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+15 files in other folders)
